Fix to the fix; messages now align bottom.

--- a/webpro/client/css/stylesv2.css
+++ b/webpro/client/css/stylesv2.css
@@ -133,15 +133,16 @@ table#fileUploadInfo td {
   min-width: 140px;
 }
 
-#messageListTD {
-    vertical-align: bottom;
-}
 #messageListContainer {
+    overflow-y: auto;
+    overflow-x: hidden;
     padding: 0px 5px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
 }
 #messageList {
-  overflow-y: auto;
-    overflow-x: hidden;
+    margin-top:auto;
 
     /* Prevents overflows */
     word-break:break-all;
